--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   </id>  
   </h3>
       </div>
+      </div>
     <p class="weather-today-icon">🌤</p>
     <ul class="info">
         <li>Chance of rain:</li>
@@ -45,13 +46,23 @@
     </ul>
       <h3>The Forecast for the next 5 Days</h3>
       <div class="forcast">
-      <ul class="list-group list-group-horizontal-xl justify-content-center">
-        <li class="list-group-item">Sunday </br>11°c | 7°c </br><p class="weather-icon">🌤</p> </li>
-        <li class="list-group-item">Monday </br> 12°c | 8°c <br> <p class="weather-icon">🌦</p></li>
-        <li class="list-group-item">Thusday </br>14°c | 8°c<br><p class="weather-icon">☁️</p></li>
-        <li class="list-group-item">wednesday </br>15°c | 10°c <br><p class="weather-icon">🌤</p> </li>
-        <li class="list-group-item">Thursday</br> 14°c | 7°c <br><p class="weather-icon">🌨</p></li>
-      </ul>
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5">
+                        <div class="col">Sunday </br>11°c | 7°c 
+                            <p class="weather-icon">🌤</p>
+                        </div>
+                        <div class="col">Monday </br> 12°c | 8°c
+                            <p class="weather-icon">🌦</p>
+                        </div>
+                        <div class="col">Thusday </br>14°c | 8°c
+                            <p class="weather-icon">☁️</p>
+                        </div>
+                        <div class="col">wednesday </br>15°c | 10°c
+                            <p class="weather-icon">🌤</p>
+                        </div>
+                        <div class="col">Thursday</br> 14°c | 7°c
+                            <p class="weather-icon">🌨</p>
+                        </div>
+
       </div>
     </div>
     <footer><small>Coded by Anat Lipman</small></footer>
