--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 
       </div>
     </div>
-    <footer><small>Coded by Anat Lipman</small></footer>
+    <footer><small>
+    <a href="https://github.com/anatbe/WeatherNow-app" target="balnk"
+    >Open-source code by Anat Lipman</a>
+    </small></footer>
 
     <script src="src/app.js"></script>
   </body>
