--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
       <div class="currentTemp">
         <h3>
-          <div class="temperature">°C<br> </div>
+          <div class="temperature">°</div>
           <id class="unit">
-            <a href="#" id="celsius-link">°C </a> |
-            <a href="#" id="fahrenheit-link"> °F</a>
+            <a href="#" id="celsius-link" class="active">°C </a> |
+            <a href="#" id="fahrenheit-link" class="active"> °F</a>
           </id>
         </h3>
       </div>
@@ -45,27 +45,11 @@
 
       <ul class="info">
         <li>Wind: <span id="wind"> </span>Km/H</li>
-        <li>Feels like: <span id="feels"></span>C°</li>
+        <li>Feels like: <span id="feels"></span></li>
         <li>Humidity: <span id="humidity"></span>%</li>
       </ul>
       <h3>The Forecast for the next 5 Days</h3>
-      <div class="forcast">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5">
-          <div class="col">Sunday </br>11°c | 7°c 
-            <p class="weather-icon">🌤</p>
-          </div>
-          <div class="col">Monday </br> 12°c | 8°c
-            <p class="weather-icon">🌦</p>
-          </div>
-          <div class="col">Thusday </br>14°c | 8°c
-            <p class="weather-icon">☁️</p>
-          </div>
-          <div class="col">wednesday </br>15°c | 10°c
-            <p class="weather-icon">🌤</p>
-          </div>
-          <div class="col">Thursday</br> 14°c | 7°c
-            <p class="weather-icon">🌨</p>
-          </div>
+      <div class="forecast">
 
         </div>
       </div>
