--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li>Feels like: <span id="feels"></span></li>
         <li>Humidity: <span id="humidity"></span>%</li>
       </ul>
-      <h3>Forecast </h3>
+      <h3>Forecast For Today </h3>
       <div class="forecast">
 
         </div>
